tests/typecast/__snapshots__/jsfmt.spec.js.snap
exports[`test typecast.js 1`] = `
"/**
 * Copyright 2004-present Facebook. All Rights Reserved.
 */
var tests = [
  () => {
    // erroneous typcasts raise errors...
    var n = (\"hey\" : number);
    // ...but \'any\' does dynamic downcasts, if you must
    var x: number = (\"hey\": any);
    var y = ((\"hey\": any): number);
  },

  () => {
    // typecasts in sequences
    // (parens always required around typecasts)
    var s: string = ((0: number), (\"hey\": string));
  },

  () => {
    // TODO pending array element inference issues
    // control case:
    // var a : Array<?number> = [0, 1, 2, 3, 4, 5, 6, 7, null];
    // typecast case:
    // var b = [(0 : ?number), 1, 2, 3, 4, 5, 6, 7, null];
  }
];
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/src/printer.js:706
      return fromString(\", \").join(path.map(print, \"expressions\"));
                              ^

TypeError: fromString(...).join is not a function
    at genericPrintNoParens (/src/printer.js:706:31)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at FastPath.call (/src/fast-path.js:113:16)
    at genericPrintNoParens (/src/printer.js:812:14)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
"
`;
